# ASE-SDK

./: .gitignore  CMakeLists.txt  LICENSE  README.md  VALIDATION.md
docs/: ASE-Auto-Test-Suite-Specification-V1.1-EN.md  ASE-Certification-and-Lifecycle-V1.1-EN.md  ASE-Compliance-Matrix-V1.1-EN.md  ASE-Design-Document-V1.1-EN.md  ASE-Implementation-Notes-V1.1-EN.md  ASE-Integration-Constraints-V1.1-EN.md  ASE-Specification-V1.1-EN.md  ASE-Static-Analysis-Requirements-V1.1-EN.md  ASE-Theoretical-Validation-V1.1-EN.md
docs/Archives/: ASE-Design-Document-V1.0-EN.md  ASE-Implementation-V1.0-EN.md  ASE-Specification-V1.0-EN.md  ASE-Test-Plan-V1.1-EN.md
examples/: host_loop_demo.cpp  project_demo.cpp  scalar_demo.cpp
include/ase/: ase.hpp
internal/: learning_loop_adam_state_demo.cpp  learning_loop_demo.cpp  learning_loop_state_demo.cpp
tests/: test_core.cpp  test_integration.cpp  test_learning_adam_state_envelope.cpp  test_learning_envelope.cpp  test_learning_state_envelope.cpp
